--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 *.userosscache
 *.sln.docstates
 
+appsettings.json
+ClientApp/.env
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
